--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@react-navigation/bottom-tabs": "6.6.0",
     "@react-navigation/elements": "1.3.30",
     "@react-navigation/material-top-tabs": "6.6.13",
-    "@react-navigation/native": "6.1.17",
+    "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "6.4.0",
+    "@react-navigation/native-stack": "^7.2.0",
     "@sayem314/react-native-keep-awake": "1.3.1",
     "@stomp/stompjs": "7.0.0",
     "@svgr/webpack": "6.3.1",
